# sprig-lang

./: .gitignore  CMakeLists.txt  README.md
include/: ast.hpp  borrowchecker.hpp  codegen.hpp  interpreter.hpp  lexer.hpp  parser.hpp  typechecker.hpp  types.hpp  version.hpp.in
src/: borrowchecker.cpp  codegen.cpp  interpreter.cpp  lexer.cpp  lsp.cpp  main.cpp  parser.cpp  typechecker.cpp
src/sprig_compiler/: codegen.sprig  lexer.sprig  lsp.sprig  main.sprig  parser.sprig  runtime.h
tests/: builtins.sprig  compiled.ll  compiled.sprig  compiled_bin  compiled_full.sprig  errors.sprig  guess.sprig  hello.sprig  input.sprig  lexer_debug.sprig  lexer_test.sprig  mutability.sprig  ownership.sprig  parser_test.sprig  pointers.sprig  shapes.sprig  types.sprig
tests/include/: main.sprig  utils.sprig
tools/: build-sprig-lsp  sprig
